--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ main {
 
 hr {
   -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+          box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
@@ -31,7 +31,7 @@ abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+          text-decoration: underline dotted;
 }
 
 b,
@@ -97,24 +97,24 @@ select {
 }
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -124,7 +124,7 @@ fieldset {
 
 legend {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -140,26 +140,26 @@ textarea {
   overflow: auto;
 }
 
-[type="checkbox"],
-[type="radio"] {
+[type=checkbox],
+[type=radio] {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
   /* 2 */
 }
 
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -188,7 +188,7 @@ template {
 ::before,
 ::after {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -282,7 +282,6 @@ a,
   text-decoration: none !important;
   color: inherit;
 }
-
 a:hover,
 .btn-link.focus:hover,
 .btn-link:focus:hover {
@@ -292,13 +291,13 @@ a:hover,
 p {
   display: block;
   -webkit-margin-before: 1em;
-  margin-block-start: 1em;
+          margin-block-start: 1em;
   -webkit-margin-after: 1em;
-  margin-block-end: 1em;
+          margin-block-end: 1em;
   -webkit-margin-start: 0px;
-  margin-inline-start: 0px;
+          margin-inline-start: 0px;
   -webkit-margin-end: 0px;
-  margin-inline-end: 0px;
+          margin-inline-end: 0px;
 }
 
 article,
@@ -342,9 +341,8 @@ section {
   --color-footer: var(--color-black-10);
   --color-footer-paragraph: #bac4e1;
   --color-border: var(--color-white-20);
-  --font-family-global: "Roboto", sans-serif;
-  --font-family-text: "Open Sans", system-ui, -apple-systemHelvetica Neue,
-    Helvetica, Arial, sans-serif;
+  --font-family-global: 'Roboto', sans-serif;
+  --font-family-text: 'Open Sans',system-ui,-apple-systemHelvetica Neue,Helvetica,Arial,sans-serif;
   --fs-general: 1rem;
   --fs-h1: 3rem;
   --fs-h2: 2rem;
@@ -361,7 +359,6 @@ section {
   --title-small: 1.2rem;
   --shadow-primary: 0px 8px 16px -4px rgba(#ed1b24, 0.25);
 }
-
 @media only screen and (min-width: 992px) {
   :root {
     --fs-general: 1rem;
@@ -389,7 +386,6 @@ section {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-
 @media only screen and (min-width: 1200px) {
   .superBigTitle {
     font-size: 4.375rem;
@@ -397,11 +393,9 @@ section {
     color: #000;
   }
 }
-
 .superBigTitle span {
   font-size: 2.375rem;
 }
-
 @media only screen and (min-width: 1200px) {
   .superBigTitle span {
     font-size: 4.375rem;
@@ -413,13 +407,11 @@ section {
   font-weight: 900;
   color: var(--color-red-20-outline);
 }
-
 @media only screen and (min-width: 576px) {
   .bigTitle {
     font-size: var(--fs-h2);
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .bigTitle {
     font-size: var(--fs-h1);
@@ -472,7 +464,7 @@ section {
   -ms-flex-direction: column;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  flex-direction: column;
+          flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
@@ -480,11 +472,10 @@ section {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
-
 .card-body {
   -ms-flex: 1 1 auto;
   -webkit-box-flex: 1;
-  flex: 1 1 auto;
+          flex: 1 1 auto;
   min-height: 1px;
   padding: 1.25rem;
 }
@@ -505,13 +496,8 @@ section {
   height: 5rem;
 }
 
-.full,
-.center,
-.newsContentWrapper,
-.full-width,
-.imgWrapper,
-.formGroup input,
-.formGroup textarea {
+.full, .formGroup input,
+.formGroup textarea, .imgWrapper, .full-width, .newsContentWrapper, .center {
   width: 100%;
 }
 
@@ -532,20 +518,18 @@ section {
 
 .center {
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   max-width: 90rem;
 }
 
 .sectionContent {
   padding: 2rem 1rem;
 }
-
 @media only screen and (min-width: 768px) {
   .sectionContent {
     padding: var(--padding-big);
   }
 }
-
 .sectionInnerContent {
   margin: var(--padding-small);
 }
@@ -558,7 +542,6 @@ section {
 .infoItems {
   background-color: var(--color-white-20);
 }
-
 .infoItems ul li {
   line-height: calc(1rem * 1.618);
 }
@@ -580,33 +563,27 @@ img {
 
 .hide {
   -webkit-transform: translateX(100vw);
-  transform: translateX(100vw);
+          transform: translateX(100vw);
   -webkit-transition: all 0.6s ease-in-out 0s;
   transition: all 0.6s ease-in-out 0s;
   -webkit-transform: translate3d(100%, 0%, 0%);
-  transform: translate3d(100%, 0%, 0%);
+          transform: translate3d(100%, 0%, 0%);
 }
 
 .showing {
   -webkit-transform: translate3d(0%, 0%, 100%);
-  transform: translate3d(0%, 0%, 100%);
-  -webkit-transition-timing-function: cubic-bezier(
-    0.53,
-    0.49,
-    0,
-    1.01
-  ) !important;
-  transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
+          transform: translate3d(0%, 0%, 100%);
+  -webkit-transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
+          transition-timing-function: cubic-bezier(0.53, 0.49, 0, 1.01) !important;
   -webkit-transition: -webkit-transform 0.6s ease-in-out 0s;
   transition: -webkit-transform 0.6s ease-in-out 0s;
   transition: transform 0.6s ease-in-out 0s;
-  transition: transform 0.6s ease-in-out 0s,
-    -webkit-transform 0.6s ease-in-out 0s;
+  transition: transform 0.6s ease-in-out 0s, -webkit-transform 0.6s ease-in-out 0s;
 }
 
 .scale-15 {
   -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 .full-height {
@@ -618,7 +595,7 @@ img {
   position: absolute;
   background-color: black;
   -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   height: 100vh;
   top: 0;
   right: 0;
@@ -630,9 +607,9 @@ img {
   display: none;
   transition: transform 0.2s, width 0.3s, -webkit-transform 0.2s;
   -webkit-transform-origin: center center;
-  transform-origin: center center;
+          transform-origin: center center;
   -webkit-transition-delay: 1s;
-  transition-delay: 1s;
+          transition-delay: 1s;
 }
 
 .darken.showing {
@@ -642,7 +619,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
+          transition-delay: 0.5s;
 }
 
 .nav--wrapper__ul {
@@ -650,11 +627,10 @@ img {
   max-width: 200px;
   width: 100%;
 }
-
 .nav--wrapper__ul li {
   opacity: 0;
   -webkit-transform: translate(0%, 100%) matrix(1, 0, 0, 1, 0, 0);
-  transform: translate(0%, 100%) matrix(1, 0, 0, 1, 0, 0);
+          transform: translate(0%, 100%) matrix(1, 0, 0, 1, 0, 0);
 }
 
 .isActive .nav--wrapper__ul li:nth-child(1) {
@@ -662,49 +638,45 @@ img {
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
   -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-  transform: matrix(1, 0, 0, 1, 0, 0);
+          transform: matrix(1, 0, 0, 1, 0, 0);
   -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
-
 .isActive .nav--wrapper__ul li:nth-child(2) {
   opacity: 1;
   -webkit-transition: all 600ms ease-in-out;
   transition: all 600ms ease-in-out;
   -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-  transform: matrix(1, 0, 0, 1, 0, 0);
+          transform: matrix(1, 0, 0, 1, 0, 0);
   -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
-
 .isActive .nav--wrapper__ul li:nth-child(3) {
   opacity: 1;
   -webkit-transition: all 900ms ease-in-out;
   transition: all 900ms ease-in-out;
   -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-  transform: matrix(1, 0, 0, 1, 0, 0);
+          transform: matrix(1, 0, 0, 1, 0, 0);
   -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
-
 .isActive .nav--wrapper__ul li:nth-child(4) {
   opacity: 1;
   -webkit-transition: all 1200ms ease-in-out;
   transition: all 1200ms ease-in-out;
   -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-  transform: matrix(1, 0, 0, 1, 0, 0);
+          transform: matrix(1, 0, 0, 1, 0, 0);
   -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
-
 .isActive .nav--wrapper__ul li:nth-child(5) {
   opacity: 1;
   -webkit-transition: all 1500ms ease-in-out;
   transition: all 1500ms ease-in-out;
   -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-  transform: matrix(1, 0, 0, 1, 0, 0);
+          transform: matrix(1, 0, 0, 1, 0, 0);
   -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
 
 .nav-link-general a {
@@ -714,8 +686,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   position: relative;
   -webkit-transition: all 0.3s ease-in-out;
@@ -723,7 +695,6 @@ img {
   padding-left: 0px;
   overflow: hidden;
 }
-
 .nav-link-general a::after {
   position: absolute;
   content: "";
@@ -736,13 +707,12 @@ img {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   -webkit-animation: out 0.3s;
-  animation: out 0.3s;
+          animation: out 0.3s;
   -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+          animation-direction: alternate;
   -webkit-transform-origin: left;
-  transform-origin: left;
+          transform-origin: left;
 }
-
 .nav-link-general a:hover {
   color: #f2f2f2;
   z-index: 2;
@@ -750,10 +720,9 @@ img {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-
 .nav-link-general a:hover::after {
   -webkit-animation: in 0.3s;
-  animation: in 0.3s;
+          animation: in 0.3s;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   display: block;
@@ -765,42 +734,24 @@ img {
   -webkit-transition: all 0.45s;
   transition: all 0.45s;
 }
-
 .team-item .team-item_wrap:hover .team__image {
   -webkit-transform: translate(10px, 10px);
-  transform: translate(10px, 10px);
+          transform: translate(10px, 10px);
 }
-
-.team-item
-  .team-item_wrap:hover
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image:after {
+.team-item .team-item_wrap:hover .team__media-wrapper .team__image-wrapper .team__image-outer .team__image:after {
   opacity: 1;
 }
-
 .team-item .team-item_wrap .team__media-wrapper .team__image-wrapper {
   position: relative;
   line-height: 0;
   -webkit-transition: all 0.45s;
   transition: all 0.45s;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer {
   -webkit-transition: all 0.45s;
   transition: all 0.45s;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer:after {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer:after {
   content: "";
   position: absolute;
   top: 0;
@@ -810,66 +761,30 @@ img {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   -webkit-transform: translate(0px, 0px);
-  transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer:after {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer:after {
   border-radius: 10px;
   -webkit-transition: all 0.45s;
   transition: all 0.45s;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer .team__image {
   border-radius: 10px;
   overflow: hidden;
   position: relative;
   -webkit-transition: all 0.45s;
   transition: all 0.45s;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image
-  img {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer .team__image img {
   overflow: hidden;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image:after {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer .team__image:after {
   background-color: rgba(237, 29, 39, 0.8);
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image:after {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer .team__image:after {
   opacity: 0;
 }
-
-.team-item
-  .team-item_wrap
-  .team__media-wrapper
-  .team__image-wrapper
-  .team__image-outer
-  .team__image:after {
+.team-item .team-item_wrap .team__media-wrapper .team__image-wrapper .team__image-outer .team__image:after {
   content: "";
   position: absolute;
   top: 0;
@@ -879,9 +794,8 @@ img {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   -webkit-transform: translate(0px, 0px);
-  transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
 }
-
 .team-item .team-item_wrap .team__media-wrapper .team__image-wrapper {
   border-radius: 10px;
 }
@@ -898,7 +812,7 @@ img {
   background-color: #fff;
   max-width: 1440px;
   -webkit-box-shadow: 0px 25px 4rem -30px rgba(0, 0, 0, 0.35);
-  box-shadow: 0px 25px 4rem -30px rgba(0, 0, 0, 0.35);
+          box-shadow: 0px 25px 4rem -30px rgba(0, 0, 0, 0.35);
 }
 
 p.title,
@@ -935,51 +849,46 @@ h3.title {
     background-position: 0% 50%;
   }
 }
-
 @-webkit-keyframes in {
   from {
     -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+            transform: scaleX(0);
   }
   to {
     -webkit-transform: scaleX(1);
-    transform: scaleX(1);
+            transform: scaleX(1);
   }
 }
-
 @keyframes in {
   from {
     -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+            transform: scaleX(0);
   }
   to {
     -webkit-transform: scaleX(1);
-    transform: scaleX(1);
+            transform: scaleX(1);
   }
 }
-
 @-webkit-keyframes out {
   from {
     -webkit-transform: scaleX(1);
-    transform: scaleX(1);
+            transform: scaleX(1);
   }
   to {
     -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+            transform: scaleX(0);
   }
 }
-
 @keyframes out {
   from {
     -webkit-transform: scaleX(1);
-    transform: scaleX(1);
+            transform: scaleX(1);
   }
   to {
     -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+            transform: scaleX(0);
   }
 }
-
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
@@ -992,7 +901,6 @@ h3.title {
     transform: translateY(0px);
   }
 }
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -1005,7 +913,6 @@ h3.title {
     transform: translateY(0px);
   }
 }
-
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1020,47 +927,46 @@ h3.title {
 
 .flex-wrap {
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .flex-reverse {
   -ms-flex-wrap: wrap-reverse;
-  flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;;
 }
 
 .flex-nowrap {
   -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .justify-start {
   -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .justify-end {
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
-.justify-center,
-.newsContentWrapper {
+.justify-center, .newsContentWrapper {
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .justify-between {
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .justify-around {
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
 }
 
 .justify-items-start {
@@ -1078,58 +984,58 @@ h3.title {
 .direction-row {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .direction-column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .content-center {
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
 }
 
 .content-start {
   -ms-flex-line-pack: start;
-  align-content: flex-start;
+      align-content: flex-start;
 }
 
 .content-end {
   -ms-flex-line-pack: end;
-  align-content: flex-end;
+      align-content: flex-end;
 }
 
 .content-between {
   -ms-flex-line-pack: justify;
-  align-content: space-between;
+      align-content: space-between;
 }
 
 .content-around {
   -ms-flex-line-pack: distribute;
-  align-content: space-around;
+      align-content: space-around;
 }
 
 .items-start {
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .items-end {
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .items-center {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .mt-1 {
@@ -1407,14 +1313,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 main {
   -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .hero {
@@ -1433,7 +1339,6 @@ main {
   width: 100%;
   max-width: 250px;
 }
-
 .list__places--item--picture {
   height: 350px;
   background-color: var(--color-bluelight-100);
