--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,12 @@
 @import "layouts/main/index";
 
 /* @import "components/index";
-@import "components/columns"; */
-
+ */
+@import "components/columns";
 @import "layouts/header/index";
+@import "pages/index";
 
-/* @import "pages/index";
+/*
 @import "pages/productos";
 @import "pages/producto";
 @import "pages/noticias";
