--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -1,8 +1,13 @@
 header {
-  height: 5rem;
+    height: 5rem;
+    background-color: #fff;
+    width: 100%;
+    overflow: hidden;
+    position: fixed;
+    z-index: 9;
 }
 
 .logo {
-  width: 2.5rem;
-  height: 5rem;
+    width: 2.5rem;
+    height: 5rem;
 }
