--- a/sass/layouts/main/_index.scss
+++ b/sass/layouts/main/_index.scss
@@ -1,39 +1,40 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
+    margin-top: 5rem;
 }
 
 .hero {
-  background-color: var(--color-bluelight-100);
-  height: 450px;
-  width: 100%;
+    background-color: var(--color-bluelight-100);
+    height: 450px;
+    width: 100%;
 }
 
 .content {
-  &--overlap {
-    background-color: #fff;
-    border-radius: 8px 8px 0 0;
-    margin: -40px 56px 0;
-  }
+    &--overlap {
+        background-color: #fff;
+        border-radius: 8px 8px 0 0;
+        margin: -40px 56px 0;
+    }
 }
 
 .list__places {
-  &--item {
-    width: 100%;
-    max-width: 250px;
+    &--item {
+        width: 100%;
+        max-width: 250px;
 
-    &--picture {
-      height: 350px;
-      background-color: var(--color-bluelight-100);
+        &--picture {
+            height: 350px;
+            background-color: var(--color-bluelight-100);
+        }
     }
-  }
 }
