--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -8,3 +8,8 @@ resultados
     flex-direction: column;
     position: relative;
 }
+
+.results__column {
+    height: 980px;
+    overflow-y: overlay;
+}
