--- a/css/main.css
+++ b/css/main.css
@@ -1807,8 +1807,9 @@ resultados
 }
 
 .results__column {
+  min-height: 0;
   height: 980px;
-  overflow-y: overlay;
+  overflow-y: scroll;
 }
 
 /*
