--- a/css/main.css
+++ b/css/main.css
@@ -1807,9 +1807,47 @@ resultados
 }
 
 .results__column {
-  min-height: 0;
+  width: 703px;
+  overflow-y: auto;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+  -ms-flex-positive: 0;
+      flex-grow: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  background-color: #fff;
+  position: relative;
+}
+
+.results__column ::-webkit-scrollbar {
+  display: none;
+}
+
+.results__column--wrapper {
   height: 980px;
-  overflow-y: scroll;
+  min-height: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 30px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 /*
