--- a/css/main.css
+++ b/css/main.css
@@ -1806,32 +1806,8 @@ resultados
   position: relative;
 }
 
-.results__column {
-  width: 703px;
-  overflow-y: auto;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  -webkit-box-flex: 0;
-  -ms-flex-positive: 0;
-      flex-grow: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  background-color: #fff;
-  position: relative;
-}
-
-.results__column ::-webkit-scrollbar {
-  display: none;
-}
-
 .results__column--wrapper {
-  height: 980px;
-  min-height: 0;
+  overflow-y: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1839,17 +1815,39 @@ resultados
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  -webkit-overflow-scrolling: touch;
-  padding-bottom: 30px;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  max-width: 980px;
 }
 
+.results__column--wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.results__column--item {
+  padding: 2rem 1.168rem;
+}
+
+/* height: 980px;
+      min-height: 0;
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
+      overflow-x: hidden;
+      flex: 1 1 auto;
+      -webkit-overflow-scrolling: touch;
+      padding-bottom: 30px;
+      scrollbar-width: none;
+      -ms-overflow-style: none; */
+/*   width: 703px;
+  overflow-y: auto;
+  flex-shrink: 0;
+  -webkit-box-flex: 0;
+  flex-grow: 0;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  background-color: #fff;
+  position: relative; */
 /*
 @import "pages/productos";
 @import "pages/producto";
