--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -15,6 +15,7 @@ resultados
         display: flex;
         flex-direction: column;
         max-width: 980px;
+        scrollbar-width: none;
 
         &::-webkit-scrollbar {
             display: none;
